# TPOO

./: README.md  package-lock.json  package.json
public/: tpoo.sqlite
src/: App.tsx  RouterComponent.tsx  index.tsx  sharedSignals.ts  types.ts
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  main.rs
src-tauri/src/attendency/: controller.rs
src-tauri/src/events/: controller.rs
src-tauri/src/migrations/: mod.rs
src-tauri/src/migrations/operations/: add_biblioteca_row.rs  add_sala_row.rs  create_table_asistencia.rs  create_table_asistencia_data.rs  create_table_asistencia_eventos.rs  create_table_biblioteca.rs  create_table_estadisticas_cortas.rs  create_table_eventos.rs  create_table_eventos_invitados.rs  create_table_sala.rs  create_table_visitant.rs  create_table_visitante.rs  mod.rs
src-tauri/src/xlsx/: controller.rs
src/components/DBConfig/: Config.tsx  DBConfig.scss  DBConfig.tsx  DBForm.scss  DBForm.tsx
src/components/attendance/: Attendance.tsx  attendance.scss  attendanceState.ts
src/components/attendanceRegister/: ARegister.scss  ARegister.tsx
src/components/events/: AddEventForm.scss  AddEventForm.tsx  Events.scss  Events.tsx  EventsControls.scss  EventsControls.tsx
src/components/events/eventsAttendance/: EventsAttendance.scss  EventsAttendance.tsx
src/components/events/eventsInvite/: EventsInvite.scss  (+1 more)
src/components/plots/: PlotToday.tsx  plots.scss
src/components/sidebar/: SideBar.scss  SideBar.tsx
src/components/statistics/: Statistics.tsx  signals.ts  statistics.scss
src/styles/: styles.css
(+19 files in other folders)
