[package]
name = "tpoo"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres", "macros" ] }
sqlx_migrator = { version = "0.9.2", features= ["postgres"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
dotenvy = "0.15.7"
async-trait = "0.1.74"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
postgres = ["sqlx/postgres", "sqlx/runtime-tokio"]
